prevent wrapping

--- a/src/components/Table/style.scss
+++ b/src/components/Table/style.scss
@@ -49,6 +49,7 @@
       position: relative;
       vertical-align: middle;
       box-sizing: border-box;
+      white-space : nowrap;
       &.condensed {
 
       }
